JDK-8370484 : [lworld] PhaseOutput::FillLocArray asserts with Unexpected type: anyptr
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: repo-valhalla
  • Priority: P3
  • Status: Resolved
  • Resolution: Fixed
  • Submitted: 2025-10-23
  • Updated: 2025-11-03
  • Resolved: 2025-11-03
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
Other
repo-valhallaFixed
Related Reports
Relates :  
Description
Some of the serviceability/sa/* tests fail with -Xcomp

For example:
serviceability/sa/TestUniverse.java

# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/open/src/hotspot/share/opto/output.cpp:929), pid=3585370, tid=3585389
#  assert(t->base() == Type::Int || t->base() == Type::Half || t->base() == Type::FloatCon || t->base() == Type::FloatBot) failed: Unexpected type: anyptr:
#
# JRE version: Java(TM) SE Runtime Environment (26.0) (fastdebug build 26-jep401ea2-2025-10-22-1116429.daniel.lunden.valhalla-many-arguments-merge)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-jep401ea2-2025-10-22-1116429.daniel.lunden.valhalla-many-arguments-merge, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V  [libjvm.so+0x18c4a11]  PhaseOutput::FillLocArray(int, MachSafePointNode*, Node*, GrowableArray<ScopeValue*>*, GrowableArray<ScopeValue*>*)+0x1fd1

Current CompileTask:
C2:18777 5898    b  4       sun.jvm.hotspot.debugger.DebuggerBase::readCInteger (311 bytes)

Stack: [0x00007fba10ff1000,0x00007fba110f1000],  sp=0x00007fba110ec6f0,  free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x18c4a11]  PhaseOutput::FillLocArray(int, MachSafePointNode*, Node*, GrowableArray<ScopeValue*>*, GrowableArray<ScopeValue*>*)+0x1fd1  (output.cpp:929)
V  [libjvm.so+0x18c4f41]  PhaseOutput::Process_OopMap_Node(MachNode*, int)+0x4e1  (output.cpp:1136)
V  [libjvm.so+0x18c8bdf]  PhaseOutput::fill_buffer(C2_MacroAssembler*, unsigned int*)+0xe7f  (output.cpp:1673)
V  [libjvm.so+0x18cb874]  PhaseOutput::Output()+0xac4  (output.cpp:394)
V  [libjvm.so+0xbe1387]  Compile::Code_Gen()+0xa27  (compile.cpp:3633)
V  [libjvm.so+0xbe68cb]  Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x210b  (compile.cpp:916)
V  [libjvm.so+0x9e1333]  C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x483  (c2compiler.cpp:149)
V  [libjvm.so+0xbf6010]  CompileBroker::invoke_compiler_on_method(CompileTask*)+0x780  (compileBroker.cpp:2345)
V  [libjvm.so+0xbf7870]  CompileBroker::compiler_thread_loop()+0x530  (compileBroker.cpp:1989)
V  [libjvm.so+0x118db4b]  JavaThread::thread_main_inner()+0x13b  (javaThread.cpp:776)
V  [libjvm.so+0x1c76e76]  Thread::call_run()+0xb6  (thread.cpp:243)
V  [libjvm.so+0x189e0d8]  thread_native_entry(Thread*)+0x128  (os_linux.cpp:898)


Comments
A pull request was submitted for review. Branch: lworld URL: https://git.openjdk.org/valhalla/pull/1714 Date: 2025-11-03 13:05:50 +0000
03-11-2025