8370484: [lworld] PhaseOutput::FillLocArray asserts with Unexpected type: anyptr